- Fixed bug #47102 (strripos issues unexpected warning with UNICODE haystack) (Noticed by Andy Wharmby)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@273733 c90b9560-bf6c-de11-be94-00142212c4b1